<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6A1FF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/test_image"
                android:src="@mipmap/ic_launcher"/>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/not_available_short"
                android:text="@string/hello"
            >

                <requestFocus/>
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#777777"
                android:text="@string/button_open_dialog"/>

            <Button
                android:id="@+id/buttonSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_schedule"/>

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <EditText
                android:id="@+id/attributeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/attribute_name"/>

            <EditText
                android:id="@+id/attributeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/attribute_value"/>

            <Button
                android:id="@+id/attributeChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/change_attribute"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="Show Dialog"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="Add Fragment"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unread_newsfeed"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/unreadCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unread_count"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#000000"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="150"
                android:progress="67" />

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_view"
                android:queryHint="Test">
            </SearchView>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:enabled="true"
                android:text="@string/switch_text"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="150"
                android:progress="121"
                android:id="@+id/seek_bar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment"
                android:textColor="#ffffff"
                android:textSize="30dp"/>

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <WebView
            android:id="@+id/webview1"
            android:layout_width="fill_parent"
            android:layout_height="400dp"/>

    </LinearLayout>

</ScrollView>
